@@ -163,6 +163,9 @@ public class MainActivity extends AppCompatActivity implements OnClickListener {
       case THEME.PURPLE:
         setTheme(R.style.Theme_Doodle_Purple);
         break;
+      case THEME.AMOLED:
+        setTheme(R.style.Theme_Doodle_Amoled);
+        break;
       default:
         if (DynamicColors.isDynamicColorAvailable()) {
           DynamicColors.applyIfAvailable(this);
