@@ -21,6 +21,7 @@
 
 <resources>
 
+  <color name="black">#000</color>
   <color name="white">#fff</color>
   <color name="transparent">#00000000</color>
 
